test/libsolidity/syntaxTests/nameAndTypeResolution/306_invalid_int_implicit_conversion_from_fixed.sol
contract test {
    function f() public {
        fixed a = 4.5;
        int b = a;
        a; b;
    }
}
// ----
// UnimplementedFeatureError: Not yet implemented - FixedPointType.
